💄 fix: Removing firefox scrollbar icon error

--- a/src/components/Organisms/Navigation/style.module.css
+++ b/src/components/Organisms/Navigation/style.module.css
@@ -99,7 +99,7 @@
   justify-content: flex-start;
   padding: 8px 16px 16px 16px;
   text-align: center;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .navigation .explorer::-webkit-scrollbar {
